--- a/_config.yml
+++ b/_config.yml
@@ -12,18 +12,16 @@ plugins:
 # Setup
 title:            ArXiv Text Gen Searches
 tagline:          'Text generation papers'
-description:      ''
+description:      'API searches for text generation papers by subtopic'
 url:              https://arnicas.github.io/text-gen-arxiv-papers/
-baseurl:          https://arnicas.github.io/text-gen-arxiv-papers/
+baseurl:          https://arnicas.github.io/text-gen-arxiv-papers
+
+
 
 author:
   name:           'Lynn Cherny'
   url:            https://twitter.com/arnicas
 
-paginate:         5
-
-# Custom vars
-#version:          2.1.0
 
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           https://github.com/arnicas/text-gen-arxiv-papers/
